src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Interaction_Category__c</fullName>
        <label>Interaction Category</label>
        <picklist>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Other_Detail_Type_del__c</fullName>
        <label>Interaction Other Detail Type</label>
        <picklist>
            <picklistValues>
                <fullName>Abandoned Items Disposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned Items Stored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment Case Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Remains on Saferent Denial List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant Removed from Saferent Denial List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Priority - Relinquish Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Caller Added/Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvalonBay Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Due Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Email 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Email 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Inquiry - not a dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy - Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA - Notice to Vacate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Packet Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in NTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Vendor/AVB Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Vendor Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Other_Type_del__c</fullName>
        <label>Interaction Other Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalon Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community/Lease Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Out Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Collections - In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Collections - Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidy Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestions - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment Ratings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvalonBay.com - Contact Us Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalon Communities - Contact Us Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kampyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Admin_Action__c</fullName>
        <description>Note last action taken by the System Admin.</description>
        <label>Last Admin Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date_of_Prior_Lease__c</fullName>
        <label>Lease End Date of Prior Lease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Signed_Date__c</fullName>
        <label>Date of Physical Signature on Lease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Signed__c</fullName>
        <inlineHelpText>Was the lease agreement signed?</inlineHelpText>
        <label>Lease Signed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leased_Rent__c</fullName>
        <inlineHelpText>Enter the leased rent amount.</inlineHelpText>
        <label>Leased Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MTM_Rate__c</fullName>
        <inlineHelpText>Required if &quot;Responsible for MTM?&quot; equals Yes.</inlineHelpText>
        <label>MTM Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NTV_Date__c</fullName>
        <label>Notice to Vacate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Correction_2__c</fullName>
        <formula>CASE( 
Adjustment_Type_2__c, &quot;Credit&quot;, (Adjusted_Amount_2__c-Original_Billing_Amount_2__c), 
&quot;Concession&quot;, (Adjusted_Amount_2__c-Original_Billing_Amount_2__c), 
(Original_Billing_Amount_2__c -Adjusted_Amount_2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Correction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Correction_3__c</fullName>
        <formula>CASE(
Adjustment_Type_3__c, &quot;Credit&quot;, (Adjusted_Amount_3__c-Original_Billing_Amount_3__c),  
&quot;Concession&quot;, (Adjusted_Amount_3__c-Original_Billing_Amount_3__c),  
(Original_Billing_Amount_3__c -Adjusted_Amount_3__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Correction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Correction_4__c</fullName>
        <formula>CASE( 
Adjustment_Type_4__c, &quot;Credit&quot;, (Adjusted_Amount_4__c-Original_Billing_Amount_4__c), 
&quot;Concession&quot;, (Adjusted_Amount_4__c-Original_Billing_Amount_4__c), 
(Original_Billing_Amount_4__c -Adjusted_Amount_4__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Correction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Deposit_Correction_2__c</fullName>
        <formula>Original_Deposit_Amount_2__c - New_Deposit_Amount_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Deposit Correction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Deposit_Correction__c</fullName>
        <description>Adjustment Case - Difference between the Original Deposit Amount and the Adjusted Depsoit Amount</description>
        <formula>Original_Deposit_Amount__c  -  New_Deposit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Deposit Correction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Deposit_Amount_2__c</fullName>
        <label>New Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Deposit_Amount__c</fullName>
        <description>Adjustment Case - Desired Deposit Amount</description>
        <inlineHelpText>Enter the new deposit amount.</inlineHelpText>
        <label>New Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Monthly_Rent__c</fullName>
        <inlineHelpText>Required for Renewal</inlineHelpText>
        <label>New Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Open_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Move Out Process: Boolean to determine if this Case is closeable (i.e. no open tasks part of the Move Out Process). Updated through Trigger</description>
        <label>No Open Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_When_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify When Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Days_on_FMTM__c</fullName>
        <formula>Lease_Signed_Date__c - Lease_End_Date_of_Prior_Lease__c</formula>
        <inlineHelpText>Calculated number of days between the lease end date of the prior lease and the physical signed date of the new lease.</inlineHelpText>
        <label># Days on FMTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Case_Flag__c</fullName>
        <description>Originial Formula from 3/7/2008 BEFORE CHANGES

IF( 
AND( 
IsClosed = False,
OR( 
CONTAINS($RecordType.Name, &quot;CCC&quot;), 
CONTAINS($RecordType.Name, &quot;Cash&quot;))), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Open Cash Mgmt &amp; CCC Case&quot;), 
IF(
AND( 
IsClosed = False,
CONTAINS($RecordType.Name, &quot;Adjustment&quot;)), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, 
&quot;Open Adjustment Case&quot;), &quot;&quot;))</description>
        <formula>IF( 
AND( 
IsClosed=False,
OR( 
CONTAINS($RecordType.Name, &quot;CCC&quot;), 
CONTAINS($RecordType.Name, &quot;Cash&quot;))), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Open Cash Mgmt &amp; CCC Case&quot;), 
IF( 
AND( 
IsClosed=False,
CONTAINS($RecordType.Name, &quot;Adjustment&quot;)), 
IMAGE(&quot;https://na4.salesforce.com/servlet/servlet.FileDownload?file=01560000000Lqyu&quot;, 
&quot;Open Adjustment Case&quot;), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open Case Indicator</inlineHelpText>
        <label>Open Case Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Billing_Amount_2__c</fullName>
        <description>Related to Correction_Type_2; this field holds the origianal amount that the adjustment will be related to.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Billing_Amount_3__c</fullName>
        <description>Related to Correction_Type_3; this field holds the origianal amount that the adjustment will be related to.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Billing_Amount_4__c</fullName>
        <description>Related to Correction_Type_4; this field holds the origianal amount that the adjustment will be related to.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Deposit_Amount_2__c</fullName>
        <label>Original Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Deposit_Amount__c</fullName>
        <description>Adjustment Case - Original Deposit Amount in Foundation</description>
        <inlineHelpText>Enter the original deposit amount.</inlineHelpText>
        <label>Original Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PBU__c</fullName>
        <label>PBU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Adjustment_Type__c</fullName>
        <label>Payment Adjustment Type</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Different Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <inlineHelpText>Enter the original payment date.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <inlineHelpText>Enter the Payment Number</inlineHelpText>
        <label>Payment Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <inlineHelpText>Select the Payment Type</inlineHelpText>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_of_MTM_Fee__c</fullName>
        <formula>Net_Correction_2__c /  Original_Billing_Amount_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Original MTM Fee waived.</inlineHelpText>
        <label>Percentage of MTM Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Policy_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when the adjustment case is requesting something outside of current Policy and/or Procedure.</description>
        <inlineHelpText>CCC Associates: Check this box when the adjustment case is requesting something outside of current Policy and/or Procedure.</inlineHelpText>
        <label>Policy Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preliminary_Inspection_Date__c</fullName>
        <label>Preliminary Inspection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_for_Credit__c</fullName>
        <inlineHelpText>Select a reason for the adjustment from the picklist provided</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Adjust: Avalon Access Payment Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust: Correction Request was pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust: Invalid Balance (Renewal, FMTM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust: Payment Misallocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjust: Payment Received Prior to Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel reimburse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance - General Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance - Move-in Condition/Apartment Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance - Response Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking / Towing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renovation / Construction Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft / Damage to Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility reimburse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waive: Emergency (death, hospitalization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waive: Good Payment History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waive: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - This field requires detailed description</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_Resident_Community_ID__c</fullName>
        <formula>(Referred_Resident__r.Parent_Community_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referred Resident Community ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Referred Resident)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Resident_s_Community_ID__c</fullName>
        <formula>Account.Parent_Community_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Resident&apos;s Community ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hidden field used by Apex Trigger when evaluating rejected status</description>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Adj_Type__c</fullName>
        <label>Renewal Adj Type</label>
        <picklist>
            <controllingField>Case_Primary_Type__c</controllingField>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect MTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waive MTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <description>Created for approval process configuration.  This field will detect if a case issue requires the Case record to be approved before closing.</description>
        <label>Requires Approval</label>
        <summaryFilterItems>
            <field>Case_Issue__c.Requires_Approval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Issue__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Responsible_for_MTM__c</fullName>
        <label>Responsible for MTM?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_Object__c</fullName>
        <label>SF Object</label>
        <picklist>
            <controllingField>Updating_Existing_SF_Object__c</controllingField>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities - Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities - Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom - Child Litigation Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom - Litigation Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom - Litigation Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom - Payment Stipulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Billing_Date_2__c</fullName>
        <description>Adjustment Case - Double Charged Fees - Second Billing Date (Field Name = Second_Billing_Date_2)</description>
        <label>Second Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Billing_Date_3__c</fullName>
        <description>Adjustment Case - Double Charged Fees - Second Billing Date (Field Name = Second_Billing_Date_3)</description>
        <label>Second Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Billing_Date__c</fullName>
        <description>Adjustment Case - Double Charged Fees - Second Billing Date</description>
        <label>Second Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Billing_Dep__c</fullName>
        <label>Second Billing (Dep)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Email__c</fullName>
        <label>Community Email Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Admin_Comments__c</fullName>
        <label>System Admin Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Charged__c</fullName>
        <formula>Total_Charges__c  +  Total_Reservation_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Charges__c</fullName>
        <description>Total amount of charges on this case.</description>
        <label>Total Amount Charged1</label>
        <summarizedField>Case_Issue__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Issue__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Issue__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credits__c</fullName>
        <description>Total amount of credits on this case.</description>
        <label>Total Amount Credited</label>
        <summarizedField>Case_Issue__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Issue__c.Type__c</field>
            <operation>equals</operation>
            <value>Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Issue__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Net_Correction__c</fullName>
        <formula>Net_Deposit_Correction__c + Net_Deposit_Correction_2__c + Net_Correction_2__c  + Net_Correction_3__c + Net_Correction_4__c +  Net_Correction_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Correction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Value__c</fullName>
        <formula>Total_Credits__c - Total_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Reservation_Fees__c</fullName>
        <label>Total Reservation Fees</label>
        <summarizedField>Case_Issue__c.Reservation_Fee__c</summarizedField>
        <summaryForeignKey>Case_Issue__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfer_From_PBU__c</fullName>
        <description>Adjustment Case - Used for Security Deposit Transfers</description>
        <inlineHelpText>Enter the PBU from which the Security Deposit should be transferred.</inlineHelpText>
        <label>Transfer From PBU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_To_Community__c</fullName>
        <label>Transfer To Community</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_from_Acct__c</fullName>
        <label>Transfer from Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_from_Community__c</fullName>
        <label>Transfer from Community</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_to_Acct__c</fullName>
        <label>Transfer to Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_to_PBU__c</fullName>
        <description>Adjustment Case - Used for Security Deposit Transfers.</description>
        <inlineHelpText>Enter the PBU where the Security Deposit should be applied.</inlineHelpText>
        <label>Transfer to PBU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Deposit_2__c</fullName>
        <label>Type of Deposit</label>
        <picklist>
            <controllingField>Dep_Adj_Type__c</controllingField>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Deposit__c</fullName>
        <label>Type of Deposit</label>
        <picklist>
            <controllingField>Dep_Adj_Type__c</controllingField>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updating_Existing_SF_Object__c</fullName>
        <label>Updating Existing SF Object?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warning_Message__c</fullName>
        <label>Warning Message</label>
        <length>70</length>
        <type>Text</type>
    </fields>
</CustomObject>